<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_main">
        <menu>
            <item
                android:id="@+id/nav_wallet"
                android:icon="@drawable/ic_menu_wallet"
                android:title="@string/menu_wallet" />
            <item
                android:id="@+id/nav_store"
                android:icon="@drawable/ic_menu_store"
                android:title="@string/menu_store" />
            <item
                android:id="@+id/nav_note"
                android:icon="@drawable/ic_menu_note"
                android:title="@string/menu_note" />
        </menu>
    </item>

    <item android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
